--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,10 @@
 bcrypt>=5.0.0
 dotenv>=0.9.0
-jwt>=1.4.0
+pyjwt>=1.4.0
 sqlalchemy>=2.0.0
 flask>=3.0.0
 flask-cors>=6.0.0
 flask-sqlalchemy>=3.0.0
 requests>=2.32
 psycopg2-binary>=2.9
+redis>=7.0.0
